kustomize/kavita/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  labels:
    app: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
        - name: kavita
          image: kizaing/kavita:latest
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              cpu: 400m
              memory: 400Mi
          command:   
          ports:
            - containerPort: 5000
          # volumeMounts:
          #   - name: conf
          #     mountPath: /app/public/conf.yml
          #     subPath: conf.yml
