kustomize/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  labels:
    app: kavita
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: kavita
