kustomize/kavita/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita-tailscale
spec:
  defaultBackend:
    service:
      name: kavita
      port:
        name: tailscale
  ingressClassName: tailscale
  tls:
  - hosts:
    - kavita
